implemented refresh, search filter & snackbar for notes pages

--- a/src/app/Components/archive/archive.component.html
+++ b/src/app/Components/archive/archive.component.html
@@ -1,1 +1,3 @@
-<app-display-notes [NotesList]="archiveArray" (displaytoGetAllNotes)="receiveMsgfromDisplay($event)"></app-display-notes>
+<div class="archive-con">
+    <app-display-notes [NotesList]="archiveArray" (displaytoGetAllNotes)="receiveMsgfromDisplay($event)"></app-display-notes>
+</div>
