--- a/src/app/Components/reset-password/reset-password.component.scss
+++ b/src/app/Components/reset-password/reset-password.component.scss
@@ -20,21 +20,21 @@
 @media screen and (min-width: 300px) and (max-width: 500px) {
     .reset-layout
 {
-    //display: flex;
-    justify-content: center;
+    display: flex;
+    //justify-content: center;
     padding-left: 25%;
     padding-right: 25%;
 }
 .container
 {
-    //display: flex;
-    justify-content: center;
-    padding: 10px 40px 10px 40px;
-    border: 1px solid lightgray;
-    box-shadow: 0px 0px 10px #00000029;
+    display: flex;
+    //justify-content: center;
+    padding: 50px 20px 10px 0px;
+    border: 0px solid lightgray;
+    box-shadow: 0px 0px 0px;
     border-radius: 10px;
     font-size: 16px;
-    margin-top: 0px;
+    margin-top: 50px;
     margin-bottom: 0px;
 }
 }
@@ -97,67 +97,3 @@
     width: 30%;
 
 }
-
-
-// .form
-// {
-//     width: 100vw;
-//     min-height: 100vh;
-//     justify-content: center;
-//     display: flex;
-//     align-items: center;
-// }
-// .container
-// {
-//     padding: 2rem;
-//     border: 1px solid black;
-//     border-radius: 6px;
-//     max-width: 300px;
-//     max-height: 650px;
-//     background-color: white;
-//     display: flex;
-//     justify-content:space-between;
-//     align-items: flex-start;
-// }
-// .new, .password
-// {
-//     width: 100%;
-// }
-// .btnNext
-// {
-//     background-color: #1877f2;
-//     border-radius: 6px;
-//     width: 30%;
-//     flex-direction: row;
-//     gap: 15px;
-//     justify-content:space-between;
-//     align-items: center;    
-    
-// }
-// .form-head
-// {
-//     padding:10px 35% 10px ;
-// }
-// .head-form
-// {
-//     padding-top: 10px;
-//     padding-bottom: 10px;
-//     padding-left: 30%;
-//     font-size:large;
-// }
-// .btnsave
-// {
-    
-    // background-color: #1877f2;
-    // border-radius: 6px;
-    // width:30%;
-    // flex-direction: row;
-    // gap: 15px;
-    // justify-content:space-between;
-    // align-items: center;    
-// }
-// .btn-div
-// {
-    // padding-left: 79%;
-    // width: 30%;
-// }
