--- a/src/app/Components/trash/trash.component.html
+++ b/src/app/Components/trash/trash.component.html
@@ -1,1 +1,3 @@
-<app-display-notes [NotesList]="trashArray" (displaytoGetAllNotes)="receiveMsgfromDisplay($event)"></app-display-notes>
+<div class="trash-con">
+    <app-display-notes [NotesList]="trashArray" (displaytoGetAllNotes)="receiveMsgfromDisplay($event)"></app-display-notes>
+</div>
