--- a/src/app/Components/updatenote/updatenote.component.scss
+++ b/src/app/Components/updatenote/updatenote.component.scss
@@ -9,7 +9,12 @@
     padding-top: 0px;
     outline: none;
 }
- 
+@media screen and (min-width: 300px) and (max-width: 500px) {
+    .container{
+       // width: 0px;
+    }
+
+}
 .text-description{
     font-size: 1rem;
     font-weight: 400;
